<resources>
    <string name="app_name">Goer - AR Event Explorer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login to Eventure</string>

    <!-- Strings related to login -->
    <string name="prompt_login_id">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="link_create_account">No account yet? Create one</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="compass_accuracy_low">Please re-calibrate compass by waving your device in a figure 8 motion.</string>
    <string name="location_fetching">Trying to find out where you are</string>
    <string name="action_logout">Logout</string>
    <string name="action_submit">Submit</string>
    <string name="action_launch_ar">View In Camera</string>

    <string name="prompt_event_title">Event Title</string>
    <string name="prompt_event_start_date">Start Date</string>
    <string name="prompt_event_end_date">End Date</string>
    <string name="prompt_event_start_time">Start Time</string>
    <string name="prompt_event_end_time">End Time</string>
    <string name="prompt_event_des">Event Description</string>

    <string name="prompt_event_loc">Where you want to host the event?</string>
</resources>
