<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.goer.view.AddEventActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/add_event_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:id="@+id/ll_input_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="#E9E9E9"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/input_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center|center_horizontal"
            android:scaleType="centerCrop"
            android:src="@drawable/add_photo"/>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="10dp"
        android:theme="@style/EditTextTheme"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/input_event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_event_title"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#E9E9E9"
        android:padding="5dp"
        android:id="@+id/input_event_location">

        <ImageView
            android:id="@+id/ic_input_loc"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_place" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/display_event_location"
            android:text="@string/prompt_event_loc"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:layout_toRightOf="@id/ic_input_loc"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:theme="@style/EditTextTheme"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp">

            <EditText
                android:id="@+id/input_event_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/prompt_event_start_date"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="datetime" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:theme="@style/EditTextTheme"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp">
            <EditText
                android:id="@+id/input_event_start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_event_start_time"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="datetime" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:theme="@style/EditTextTheme"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp">

            <EditText
                android:id="@+id/input_event_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:hint="@string/prompt_event_end_date"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="datetime" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:theme="@style/EditTextTheme"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp">

            <EditText
                android:id="@+id/input_event_end_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:hint="@string/prompt_event_end_time"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="datetime" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:theme="@style/EditTextTheme"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">
        <EditText
            android:id="@+id/input_event_des"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="15dp"
            android:hint="@string/prompt_event_des"
            android:inputType="textMultiLine"
            android:overScrollMode="ifContentScrolls"
            android:theme="@style/EditTextTheme"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/input_is_public"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:checked="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:theme="@style/SwitchCompatStyle"
        android:text="Public Event"
        android:layout_margin="5dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp"
        android:theme="@style/EditTextTheme"
        android:layout_margin="5dp">

        <EditText
            android:id="@+id/input_max_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextTheme"
            android:layout_weight="0.5"
            android:hint="Maximum number of attendees (optional)"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>


</LinearLayout>
</android.support.v4.widget.NestedScrollView>